# Hosted-Agents-SaaS-Platform

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
alembic/: env.py
alembic/versions/: 20260222_0001_initial.py  20260222_0002_provisioning_queue_reliability.py  20260223_0003_agent_entitlements.py  20260223_0004_customer_user_id_rename.py
docs/: ARCHITECTURE_DECISIONS.md  AZURE_IDENTITY_AND_RBAC.md  ENTITLEMENT_ROLLOUT.md  ENTRA_ADMIN_RBAC_CONTRACT.md  ENTRA_API_APP_SETUP.md  MIGRATION_MAP_FROM_CURRENT_REPO.md
infra/azure/containerapps/: README.md  main.bicep  main.parameters.example.json
src/saas_platform/: config.py  telemetry.py
src/saas_platform/adapters/: foundry.py  postgres.py  queue.py  secrets.py  storage.py
src/saas_platform/api/: main.py
src/saas_platform/domain/: interfaces.py  models.py
src/saas_platform/ops/: __init__.py  entitlement_rollout.py
src/saas_platform/policies/: auth.py  quota.py  rate_limit.py
src/saas_platform/provisioning/: runner.py  worker.py
tests/: test_foundry_auth_policy.py  test_foundry_gateway_execute.py  test_health.py  test_jwks_auth.py  test_provisioning_worker.py  test_queue_backend_selection.py  test_rate_limit_backend.py  test_tenant_flow.py
